FlexDeploy 8.0/fdtlt82/FLEXDEPLOY-12131/objects/FD_Project__c.object
<CustomObject>
    <description>FD</description>
    <fields>
        <fullName>FD_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FD_Build_Workflow__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Build Workflow</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Workflow does not exist</errorMessage>
            <filterItems>
                <field>FD_Workflow__c.FD_Workflow_Type__c</field>
                <operation>equals</operation>
                <value>Build</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FD_Workflow__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FD_Deploy_Workflow__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Deploy Workflow</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Workflow does not exist</errorMessage>
            <filterItems>
                <field>FD_Workflow__c.FD_Workflow_Type__c</field>
                <operation>equals</operation>
                <value>Deploy</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FD_Workflow__c</referenceTo>
        <relationshipLabel>Projects (Deploy Workflow)</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FD_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FD_Project_Blueprint__c</fullName>
        <label>Project Blueprint</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADF Application</fullName>
                </value>
                <value>
                    <fullName>Container</fullName>
                </value>
                <value>
                    <fullName>Dell Boomi</fullName>
                </value>
                <value>
                    <fullName>File Deployments</fullName>
                </value>
                <value>
                    <fullName>Google Apigee</fullName>
                </value>
                <value>
                    <fullName>MuleSoft</fullName>
                </value>
                <value>
                    <fullName>Oracle API</fullName>
                </value>
                <value>
                    <fullName>Oracle JET Application</fullName>
                </value>
                <value>
                    <fullName>PeopleSoft</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>SAP Change Requests</fullName>
                </value>
                <value>
                    <fullName>SQL Scripts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FD_Project_Path__c</fullName>
        <defaultValue>&quot;FlexDeploy/Projects/&quot;</defaultValue>
        <label>Project Path</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FD_Project_Blueprint__c</columns>
        <columns>FD_Project_Path__c</columns>
        <columns>FD_Active__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>